# neuralnetwork

./: .buildconfig  .gitignore  README.md  meson.build  org.gnome.Example.json
lib/: image_processing.h  network.h
src/: draw.cpp  main.cpp  meson.build
